--- a/src/app/components/stock-details/stock-details.component.html
+++ b/src/app/components/stock-details/stock-details.component.html
@@ -130,7 +130,7 @@
             <!-- No Dividends Message -->
             <ng-template #noDividends>
               <div class="no-content-message text-center">
-                {{ "There's no information availabe" | translate }}
+                {{ "There's no information available" | translate }}
               </div>
             </ng-template>
           </div>
