--- a/src/app/components/home/news/news.component.scss
+++ b/src/app/components/home/news/news.component.scss
@@ -27,29 +27,29 @@
       direction: rtl;
       text-align: right;
       cursor: pointer;
-  
+    
       .news-image {
-        flex: 1;
+        flex: 0 0 100px; 
         img {
-          width: 100%;
-          height: auto;
+          width: 100%;   
+          height: auto; 
           border-radius: 8px;
         }
       }
-  
+    
       .news-content {
         flex: 2;
         padding-right: 20px;
-  
+    
         .news-title {
           font-size: 1.5em;
           color: #007bff;
         }
-  
+    
         .news-summary {
           margin: 10px 0;
         }
-  
+    
         .news-read-more {
           color: #007bff;
           text-decoration: underline;
@@ -57,6 +57,7 @@
         }
       }
     }
+    
   
     .news-detail-container {
       display: flex;
