--- a/src/app/components/home/sectors/sectors.component.html
+++ b/src/app/components/home/sectors/sectors.component.html
@@ -39,9 +39,11 @@
                         </div>
                     </div>
                     <!-- Currencies Table -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 currency-table">
+                        <h1>{{ "Currencies.Title" | translate }}</h1>
+                        
                         <div class="summary-details mx-2 my-2">
-                            <h1>{{ "Currencies.Title" | translate }}</h1>
+                            
                             <div class="table-responsive"> 
                                 <table class="table">
                                     <thead>
@@ -59,7 +61,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                <span style="margin: 50px;">{{ "LastUpdated" | translate }} : {{ currenciesData[0].lastUpdated | date:'short' }}</span>
+                                <span style="margin: 50px;">{{ "LastUpdated" | translate }} : {{ dateFormatterService.getFormattedDate( currenciesData[0].lastUpdated ) }}</span>
                             </div>
                         </div>
                     </div>
