--- a/src/app/components/home/sectors/sectors.component.scss
+++ b/src/app/components/home/sectors/sectors.component.scss
@@ -2,10 +2,11 @@
 
 .jobs {
     background-color: $Navy;
-    margin-bottom: -5%;
+    // margin-bottom: -5%;
 
     .jobs-inner {
-        padding-top: 10%;
+        margin-top: 5%;
+        padding-top: 5%;
         // margin-top: 5%;
         background-color: #fff;
     }
