--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -1,11 +1,41 @@
 <footer>
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
-            <!-- <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/27medwa2el" target='_blank'>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "facebook")' href="https://www.facebook.com/PioneersSecurities" target='_blank'>
                     <i class="fab fa-facebook"></i>
                 </a>
-            </li> -->
+            </li>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "x")' href="https://x.com/PioSec/" target='_blank'>
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "whatsapp")' href="https://whatsapp.com/channel/0029Va21eln1iUxR3gxiq01l" target='_blank'>
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+            </li>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "telegram")' href="https://t.me/+qj0TIQiOvihmM2E0" target='_blank'>
+                    <i class="fab fa-telegram"></i>
+                </a>
+            </li>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "whatsapp")' href="https://www.instagram.com/pioneers.securities/?fbclid=IwY2xjawEm09xleHRuA2FlbQIxMAABHTD61PWK2qLYhVCqnQTcutViJueRMdRaOLmd2bBDA4FFL8xEab7U3KAtYg_aem_q-a2x3RxJVaCu_SEle33GQ" target='_blank'>
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "whatsapp")' href="https://open.spotify.com/show/4bScgs3LywR2KFj4lotZ3S?si=47dc17ad801f4905" target='_blank'>
+                    <i class="fab fa-spotify"></i>
+                </a>
+            </li>
+            <li>
+                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "tiktok")' href="https://www.tiktok.com/@pioneerssecurities?fbclid=IwY2xjawEm075leHRuA2FlbQIxMAABHX3TWgKXNCzjyxf1W7YBbEwPAFexw1ltgjYuOwqXAcXI9wW7PpJqa2D7rg_aem_3fIWGQsik_WQOyU17yj9tg" target='_blank'>
+                    <i class="fab fa-tiktok"></i>
+                </a>
+            </li>
             <li>
                 <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/company/pioneerssecurities/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
