--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -43,7 +43,6 @@
         </a>
         <div class="nav-center-wrapper">
             <ul ngbNav #nav="ngbNav" class="menu-ul">
-                
                 <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_about", "menu", "click")'>
                     <a ngbNavLink (click)='scroll("banner")'><span class='nav-number'></span> <span class="underline nav-text"> {{"Header.Item1" | translate}}</span></a>
                     <ng-template ngbNavContent>First content</ng-template>
@@ -69,9 +68,15 @@
                     <ng-template ngbNavContent>First content</ng-template>
                 </li>
                 <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
-                    <a ngbNavLink (click)='scroll("contact-us")'><span class='nav-number'></span> <span class="underline nav-text"> {{"Header.Item6" | translate}}</span></a>
+                    <a ngbNavLink><span class='nav-number'></span> <span class="underline nav-text"> {{"Header.Item6" | translate}}</span></a>
                     <ng-template ngbNavContent>Second content</ng-template>
+                  <ul class="sub-menu">
+                    <li><a>Hello</a></li>
+                    <li><a>World</a></li>
+                  </ul>
                 </li>
+
+
             </ul>
         </div>
         <div ngbDropdown class="d-inline-block">
@@ -132,14 +137,20 @@
                             </a>
                         </li>
                         <li (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
-                            <a (click)='scroll("agenda")'>
+                            <a (click)='changeTab("agenda")'>
                                 <span></span> {{"Header.Item7" | translate}}
                             </a>
+                          <ul id="agenda" class="sub-menu-responsive">
+                            <li><a>Hello</a></li>
+                            <li><a>World</a></li>
+                          </ul>
                         </li>
                         <li  (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
-                            <a (click)='scroll("contact-us")'>
-                                <span></span> {{"Header.Item6" | translate}}</a>
-                            
+                            <a (click)='changeTab("contact-us")'><span></span> {{"Header.Item6" | translate}}</a>
+                          <ul id="contact-us" class="sub-menu-responsive">
+                            <li><a>Hello</a></li>
+                            <li><a>World</a></li>
+                          </ul>
                         </li>
                         <li>
                             <div class="language-container">
